fix: fix link base

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>YoutubeClient</title>
-  <base href="https://github.com/rolling-scopes-school/brbrov">
+  <base href="https://rolling-scopes-school.github.io/brbrov-ANGULAR2023Q1/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
 <style>body{margin:0;padding:0;box-sizing:content-box}</style><link rel="stylesheet" href="styles.b96b7298b4bdc23a.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b96b7298b4bdc23a.css"></noscript></head>
